--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -7,29 +7,37 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint . --ext .tsx,.ts --fix",
-    "prepare": "husky install",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watchAll",
+    "test:ci": "jest --runInBand"
   },
   "author": {
     "name": "Alan Neres",
     "email": "alanneres10@hotmail.com",
     "url": "https://github.com/ner3s"
   },
+  "jest": {
+    "preset": "jest-expo"
+  },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.5",
+    "@expo-google-fonts/poppins": "^0.2.0",
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
-    "axios": "^0.21.1",
+    "@react-navigation/stack": "~5.12.8",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
+    "expo-asset": "~8.3.2",
     "expo-constants": "~11.0.1",
+    "expo-font": "~9.2.1",
+    "expo-linking": "~2.3.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
-    "expo-updates": "^0.8.1",
-    "formik": "^2.2.9",
+    "expo-updates": "~0.8.2",
+    "expo-web-browser": "~9.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-i18next": "^11.11.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "~1.10.2",
@@ -37,19 +45,19 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.0",
-    "yup": "^0.32.9"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@testing-library/react-native": "^7.2.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/styled-components": "^5.1.11",
     "@types/styled-components-react-native": "^5.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "babel-plugin-root-import": "^6.6.0",
-    "eslint": "^7.30.0",
+    "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
@@ -60,16 +68,10 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.0",
-    "jest": "^27.0.6",
-    "jest-expo": "^42.0.1",
+    "jest-expo": "~41.0.0-beta.0",
     "jest-styled-components": "^7.0.5",
-    "prettier": "2.3.2",
-    "react-test-renderer": "^17.0.2",
+    "prettier": "^2.3.2",
     "typescript": "~4.0.0"
-  },
-  "jest": {
-    "preset": "jest-expo"
   },
   "private": true
 }
